[package]
name = "mimc_miner_server"
version = "0.2.0"
edition = "2021"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
panic = "abort"

[dependencies]
# Web
rocket = { version = "0.5", features = ["json"] }
rocket_cors = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CPU 路径
rayon = "1.8"
itertools = "0.12"
once_cell = "1.19"
num-bigint = "0.4"
num-traits = "0.2"

ark-bn254 = "0.3"
ark-ff = "0.3"
arkworks-mimc = { version = "0.3", default-features = false, features = ["mimc-5-220-bn254"] }

# GPU 路径
wgpu = "0.19"
pollster = "0.3"
futures-intrusive = "0.5"
anyhow = "1"
bytemuck = { version = "1", features = ["derive"] }